# tespat-engine

./: AGENTS.md  Cargo.toml  README-zh.md  README.md  aa.json  exported.json
.github/workflows/: deploy-tespat-web.yml
examples/: .gitignore
examples/city-layout/: Cargo.toml  build.rs  city-layout.json
examples/city-layout/src/: main.rs
examples/dungeon-generation/: Cargo.toml  build.rs
examples/dungeon-generation/patterns/: generate_paths.json  generate_rooms.json
examples/dungeon-generation/src/: generate_paths.rs  generate_rooms.rs  main.rs
examples/slime-eat-apple/: Cargo.toml  build.rs  slime_eat_apple.json
tespat-build/: Cargo.toml
tespat-build/src/: compile.rs  lib.rs
tespat-build/src/compile/: ir.rs  (+3 more)
tespat-compiler/: Cargo.toml
tespat-compiler/src/: compile.rs  lib.rs
tespat-core/: Cargo.toml
tespat-core/src/: color_direction.rs  lib.rs  static_color.rs  tests.rs  web_editor.rs
tespat-core/src/app/: history.rs  match_filter.rs  matches.rs  mod.rs
tespat-core/src/layer/: mod.rs  pattern_match.rs  pattern_replace.rs
tespat-core/src/pattern/: mod.rs  transform.rs
tespat-editor/: Cargo.toml
tespat-editor/examples/: slime_eat_apple.rs  the_alchemist.rs
tespat-editor/src/: main.rs
tespat-macros/: Cargo.toml
tespat-macros/src/: color.rs  enum_filter.rs  lib.rs
tespat-runtime/: Cargo.toml
tespat-runtime/src/: lib.rs  pattern.rs
tespat-web/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
tespat-web/scripts/: syncTablerOutlineIcons.mjs
tespat-web/src/: App.module.css  App.tsx  EditorData.tsx  FileSyncContext.tsx  ProjectData.tsx  Workspace.tsx  file-system-access.d.ts  index.css  main.tsx  projectSerialization.ts
(+50 files in other folders)
